--- a/Resources_original/img/character/taihou/taihou.plist
+++ b/Resources_original/img/character/taihou/taihou.plist
@@ -7,7 +7,7 @@
 			<key>a1taihou_a_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3904},{25,32}}</string>
+				<string>{{0,3867},{25,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>a1taihou_a_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3703},{27,31}}</string>
+				<string>{{0,3702},{27,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>a1taihou_a_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,4005},{25,31}}</string>
+				<string>{{26,3798},{25,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>a1taihou_a_0_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3767},{25,32}}</string>
+				<string>{{0,4004},{25,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>a1taihou_a_0_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3800},{25,31}}</string>
+				<string>{{26,3766},{25,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>a1taihou_a_0_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3904},{25,32}}</string>
+				<string>{{0,3867},{25,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>a1taihou_a_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3930},{24,32}}</string>
+				<string>{{26,3928},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>a1taihou_a_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3898},{24,31}}</string>
+				<string>{{27,3734},{24,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>a1taihou_a_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3640},{29,31}}</string>
+				<string>{{0,3639},{29,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>a1taihou_a_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3996},{24,32}}</string>
+				<string>{{26,3994},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>a1taihou_a_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,4062},{24,31}}</string>
+				<string>{{26,3896},{24,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>a1taihou_a_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3576},{30,31}}</string>
+				<string>{{0,3575},{30,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>a1taihou_a_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3672},{29,30}}</string>
+				<string>{{0,3671},{29,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>a1taihou_a_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3735},{26,31}}</string>
+				<string>{{0,3734},{26,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>a1taihou_a_3_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3545},{32,30}}</string>
+				<string>{{0,3512},{32,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>a2taihou_a_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3904},{25,32}}</string>
+				<string>{{0,3867},{25,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -245,7 +245,7 @@
 			<key>a2taihou_a_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3513},{32,31}}</string>
+				<string>{{0,3543},{32,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -259,7 +259,7 @@
 			<key>a2taihou_a_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3640},{29,31}}</string>
+				<string>{{0,3639},{29,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -273,7 +273,7 @@
 			<key>a2taihou_a_0_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3868},{25,35}}</string>
+				<string>{{0,3968},{25,35}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -287,7 +287,7 @@
 			<key>a2taihou_a_0_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3608},{30,31}}</string>
+				<string>{{0,3607},{30,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -301,7 +301,7 @@
 			<key>a2taihou_a_0_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,4005},{25,31}}</string>
+				<string>{{26,3798},{25,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -315,7 +315,7 @@
 			<key>a2taihou_a_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3930},{24,32}}</string>
+				<string>{{26,3928},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -329,7 +329,7 @@
 			<key>a2taihou_a_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3640},{29,31}}</string>
+				<string>{{0,3639},{29,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -343,7 +343,7 @@
 			<key>a2taihou_a_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3868},{25,35}}</string>
+				<string>{{0,3968},{25,35}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -357,7 +357,7 @@
 			<key>a2taihou_a_1_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3608},{30,31}}</string>
+				<string>{{0,3607},{30,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -371,7 +371,7 @@
 			<key>a2taihou_a_1_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3800},{25,31}}</string>
+				<string>{{26,3766},{25,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -385,7 +385,7 @@
 			<key>a2taihou_a_1_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3898},{24,31}}</string>
+				<string>{{27,3734},{24,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -399,7 +399,7 @@
 			<key>a2taihou_a_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3996},{24,32}}</string>
+				<string>{{26,3994},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -413,7 +413,7 @@
 			<key>a2taihou_a_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3608},{30,31}}</string>
+				<string>{{0,3607},{30,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -427,7 +427,7 @@
 			<key>a2taihou_a_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3800},{25,31}}</string>
+				<string>{{26,3766},{25,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -441,7 +441,7 @@
 			<key>a2taihou_a_2_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3640},{29,31}}</string>
+				<string>{{0,3639},{29,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -455,7 +455,7 @@
 			<key>a2taihou_a_2_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3868},{25,35}}</string>
+				<string>{{0,3968},{25,35}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -469,7 +469,7 @@
 			<key>a2taihou_a_2_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,4062},{24,31}}</string>
+				<string>{{26,3896},{24,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -497,7 +497,7 @@
 			<key>a2taihou_a_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3545},{32,30}}</string>
+				<string>{{0,3512},{32,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -511,7 +511,7 @@
 			<key>a2taihou_a_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3608},{30,31}}</string>
+				<string>{{0,3607},{30,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -525,7 +525,7 @@
 			<key>a2taihou_a_3_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3800},{25,31}}</string>
+				<string>{{26,3766},{25,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -539,7 +539,7 @@
 			<key>a2taihou_a_3_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3640},{29,31}}</string>
+				<string>{{0,3639},{29,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -553,7 +553,7 @@
 			<key>a2taihou_a_3_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3672},{29,30}}</string>
+				<string>{{0,3671},{29,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -564,10 +564,24 @@
 				<string>{32,64}</string>
 			</dict>
 
+			<key>effect.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,3482},{65,29}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{23,18},{65,29}}</string>
+				<key>sourceSize</key>
+				<string>{96,64}</string>
+			</dict>
+
 			<key>taihou_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3801},{25,32}}</string>
+				<string>{{0,3800},{25,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -581,7 +595,7 @@
 			<key>taihou_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3767},{25,33}}</string>
+				<string>{{0,3766},{25,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -595,7 +609,7 @@
 			<key>taihou_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3834},{25,33}}</string>
+				<string>{{0,3833},{25,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -609,7 +623,7 @@
 			<key>taihou_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3930},{24,32}}</string>
+				<string>{{26,3928},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -623,7 +637,7 @@
 			<key>taihou_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,4029},{24,32}}</string>
+				<string>{{26,3961},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -637,7 +651,7 @@
 			<key>taihou_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3963},{24,32}}</string>
+				<string>{{26,3830},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -651,7 +665,7 @@
 			<key>taihou_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3832},{24,32}}</string>
+				<string>{{26,3863},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -665,7 +679,7 @@
 			<key>taihou_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{28,3703},{24,32}}</string>
+				<string>{{26,4027},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -679,7 +693,7 @@
 			<key>taihou_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,3865},{24,32}}</string>
+				<string>{{26,4060},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -707,7 +721,7 @@
 			<key>taihou_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3937},{25,33}}</string>
+				<string>{{0,3934},{25,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -721,7 +735,7 @@
 			<key>taihou_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3971},{25,33}}</string>
+				<string>{{0,3900},{25,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -735,7 +749,7 @@
 			<key>taihou_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2342},{506,1170}}</string>
+				<string>{{507,1140},{506,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -749,7 +763,7 @@
 			<key>taihou_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2342},{506,1170}}</string>
+				<string>{{507,1140},{506,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -763,7 +777,7 @@
 			<key>taihou_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1171},{506,1170}}</string>
+				<string>{{0,2311},{506,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -777,7 +791,7 @@
 			<key>taihou_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1171},{506,1170}}</string>
+				<string>{{0,2311},{506,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -791,13 +805,27 @@
 			<key>taihou_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{506,1170}}</string>
+				<string>{{0,1140},{506,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
 				<string>{{142,15},{506,1170}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>taihou_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{732,1139}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{31,39},{732,1139}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -809,7 +837,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{512,4096}</string>
+			<string>{1024,4096}</string>
 			<key>textureFileName</key>
 			<string>taihou.png</string>
 			</dict>
